ingress/rules/productivity/nextcloud/ingress-nextcloud.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-external
  namespace: default
spec:
  ports:
  - protocol: TCP
    port: 444
    targetPort: 444

---

apiVersion: v1
kind: Endpoints
metadata:
  name: nextcloud-external
  namespace: default
subsets:
  - addresses:
      - ip: 10.0.0.2
    ports:
      - port: 444

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nextcloud
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" # Change to HTTPS if required
    nginx.ingress.kubernetes.io/proxy-body-size: 4G
    nginx.ingress.kubernetes.io/server-snippet: |-
      server_tokens off;
      proxy_hide_header X-Powered-By;
      rewrite ^/.well-known/webfinger /index.php/.well-known/webfinger last;
      rewrite ^/.well-known/nodeinfo /index.php/.well-known/nodeinfo last;
      rewrite ^/.well-known/host-meta /public.php?service=host-meta last;
      rewrite ^/.well-known/host-meta.json /public.php?service=host-meta-json;
      location = /.well-known/carddav {
        return 301 $scheme://$host/remote.php/dav;
      }
      location = /.well-known/caldav {
        return 301 $scheme://$host/remote.php/dav;
      }
      location = /robots.txt {
        allow all;
        log_not_found off;
        access_log off;
      }
      location ~ ^/(?:build|tests|config|lib|3rdparty|templates|data)/ {
        deny all;
      }
      location ~ ^/(?:autotest|occ|issue|indie|db_|console) {
        deny all;
      }
spec:
  ingressClassName: nginx
  rules:
  - host: cloud.domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud-external
            port:
              number: 444
  tls:
  - hosts:
    - cloud.domain.com
    secretName: nextcloud-tls
